# cercs_env

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  TRACE-EXAMPLE  aclocal.m4  cercs_env.h  config.h.cmake  config.h.in  configure  configure.in  env.c  test  test_timing.c  timing_gcc_x86.c  timing_gettimeofday.c  timing_hrtime.c  timing_linux_x86.c  trace.c  version.c
cmake/: AddKaosLibrary.cmake  AddLibtoolLibrary.cmake
config/: ltmain.sh  mkinstalldirs
hooks/: post-commit
