## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = no-dependencies foreign

lib_LTLIBRARIES = libcercs_env.la

noinst_HEADERS = 

libcercs_env_la_SOURCES = env.c
libcercs_env_la_LIBADD =  
libcercs_env_la_LDFLAGS = -no-undefined
include_HEADERS = cercs_env.h


bin_PROGRAMS = 

LIBS = @LIBS@
